# auto-research

./: .gitignore  README.md  cockpit.db-shm  cockpit.db-wal  pyproject.toml
.commandcode/taste/: taste.md
app/agents/: harness.py  llm.py
app/backend/: __main__.py
app/backend/api/: deps.py  routes.py
app/backend/services/: event_bus.py  orchestrator.py  queue.py  runs.py
app/evolution/: engine.py
app/prompts/: roles.py
app/research/: engine.py
app/storage/: db.py
app/wiki/: service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/panes/: EvolutionPane.tsx  LiveStrip.tsx  RunsPane.tsx  WikiPane.tsx
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_event_bus.py  test_evolution.py  test_llm.py  test_orchestrator.py  test_queue.py  test_research.py  test_runs_repo.py  test_storage.py  test_wiki.py
